--- a/CSS/index.css
+++ b/CSS/index.css
@@ -24,44 +24,48 @@ body {
   border-radius: 20px;
 }
 
-h1, h2 {
+h1,
+h2 {
   text-align: center;
   font-size: 38px;
 }
 
 #recipie-div {
-    height: 25vh;
+  height: 25vh;
+  background: var(--alt-color-3);
 }
 
 #recipie-div img {
-    height: 20vh;
-    display: inline;
-    justify-content: space-evenly;
-    margin-left: 5vw;
+  height: 20vh;
+  display: inline;
+  justify-content: space-between;
+  border: 4px solid tan;
 }
 
 ul {
-    background: linear-gradient(270deg, var(--alt-color), var(--page-color));
-    width: 100%;
-    height: 75vh;
-    margin: auto;
-    border: 10px solid var(--alt-color-2);
-    border-radius: 20px;
+  background: linear-gradient(270deg, var(--alt-color), var(--page-color));
+  width: 100%;
+  height: 100vh;
+  border: 10px solid var(--alt-color-2);
+  border-radius: 20px;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  column-gap: 2vw;
+  text-align: center;
 
 }
 
 ul li {
   list-style-type: none;
-  padding: 2%;
-  height: 6vh;
+  height: 8vh;
   font-size: 24px;
 }
 
-ul li a:active, ul li a:visited, ul li a:hover {
-    color: black;
-    text-decoration: none;
-    text-transform: none;
+ul li a:active,
+ul li a:visited,
+ul li a:hover {
+  color: var(--alt-color-);
+  text-decoration: none;
+  text-transform: none;
 }
 
-ul img {
-}
