--- a/CSS/index.css
+++ b/CSS/index.css
@@ -31,15 +31,19 @@ h2 {
 }
 
 #recipie-div {
-  height: 25vh;
+  height: 30vh;
   background: var(--alt-color-3);
+  border-radius: 20px;
+  width: 25vw;
+  margin-top: 5vh;
 }
 
 #recipie-div img {
   height: 20vh;
   display: inline;
   justify-content: space-between;
-  border: 4px solid tan;
+  border: 4px solid whitesmoke;
+  border-radius: 20px;
 }
 
 ul {
@@ -53,19 +57,27 @@ ul {
   column-gap: 2vw;
   text-align: center;
 
+
 }
 
 ul li {
   list-style-type: none;
-  height: 8vh;
+  height: 20vh;
   font-size: 24px;
+  color: blue;
+  padding-top: 3vh;
+}
+
+ a #ramen, #flank-steak, #miso {
+    align-items: center;
+    justify-content: center;
+    align-content: center;
 }
 
 ul li a:active,
 ul li a:visited,
-ul li a:hover {
+ul li a:hover, ul li a {
   color: var(--alt-color-);
   text-decoration: none;
-  text-transform: none;
 }
 
