--- a/CSS/index.css
+++ b/CSS/index.css
@@ -6,6 +6,9 @@
   --alt-color-3: #99621e;
   --page-gradient: linear-gradient(270deg, var(--alt-color), var(--page-color));
   --page-gradient-2: linear-gradient(90deg, var(--alt-color-3), var(--alt-color));
+  --page-image: url("../assets/fire-2.jpg");
+  --page-image-2: url("../assets/kitchen-2.jpg");
+  --page-image-3: url("../assets/kitchen.jpg");
 }
 
 * {
@@ -15,15 +18,20 @@
 
 body {
   background: linear-gradient(270deg, var(--alt-color-3), var(--alt-color));
+
 }
 
 #title-div {
-  background: linear-gradient(270deg, var(--alt-color), var(--page-color));
-  width: 80%;
-  height: 25vh;
+  /*background: linear-gradient(270deg, var(--alt-color), var(--page-color));*/
+  background: var(--page-image);
+  background-size: cover;
+  height: 60vh;
   margin: auto;
-  border: 10px solid var(--alt-color-2);
-  border-radius: 20px;
+}
+
+#title-text {
+    color: white;
+    text-shadow: black;
 }
 
 h1,
