--- a/CSS/index.css
+++ b/CSS/index.css
@@ -17,7 +17,7 @@
 }
 
 body {
- background: linear-gradient(270deg, var(--alt-color), var(--page-color));
+ background: var(--page-color-2)
 }
 
 #title-div {
@@ -30,16 +30,16 @@ body {
   border: 3px solid var(--alt-color)
 }
 
-#title-text {
+#title-text, #menu-title {
     text-shadow: black;
     background-color: black;
     opacity: .8;
-    height: 10vh;
+    height: 12vh;
     position: sticky;
     top:0;
     z-index: 1;
 }
-#title-text span {
+#title-text span, #recipie-div h2 {
     color: white;
     display: block;
     align-content: center;
@@ -54,15 +54,16 @@ h2 {
   font-size: 38px;
 }
 
-#recipie-div {
+#recipie-list {
   height: 30vh;
   background: var(--page-gradient-2);
+  border: 4px solid var(--page-color-2);
   border-radius: 20px;
   width: 25vw;
   margin-top: 5vh;
 }
 
-#recipie-div img {
+#recipie-list img {
   height: 20vh;
   width: 20vw;
   display: inline;
@@ -72,17 +73,15 @@ h2 {
 }
 
 ul {
-  background: linear-gradient(270deg, var(--alt-color), var(--page-color));
+  background: black;
+  opacity: .9;
   width: 100%;
   height: 80vh;
   border: 10px solid var(--alt-color-2);
-  border-radius: 20px;
   display: grid;
   grid-template-columns: auto auto auto;
   column-gap: 2vw;
   text-align: center;
-
-
 }
 
 ul li {
@@ -99,4 +98,5 @@ ul li a:hover, ul li a {
   color: var(--alt-color-);
   text-decoration: none;
 }
+
 
