--- a/CSS/index.css
+++ b/CSS/index.css
@@ -13,7 +13,7 @@
 
 * {
   box-sizing: border-box;
-  border: 1px solid black;
+
 }
 
 body {
@@ -30,29 +30,15 @@ body {
   border: 3px solid var(--alt-color)
 }
 
-#title-text, #menu-title {
-    text-shadow: black;
-    background-color: black;
-    opacity: .8;
-    height: 12vh;
-    position: sticky;
-    top:0;
-    z-index: 1;
-}
 #title-text span, #recipie-div h2 {
     color: white;
     display: block;
     align-content: center;
     justify-content: center;
     padding-bottom: 2vh;
-    font-weight: bold;;
+    font-weight: bold;
 }
 
-h1,
-h2 {
-  text-align: center;
-  font-size: 38px;
-}
 
 #recipie-list {
   height: 30vh;
@@ -74,7 +60,6 @@ h2 {
 
 ul {
   background: black;
-  opacity: .9;
   width: 100%;
   height: 80vh;
   border: 10px solid var(--alt-color-2);
